<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_question"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/what_is_the_capital_of_country"
            android:textColor="#363A43"/>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/image_iv"
            android:layout_marginTop="16dp"
            android:src="@drawable/egypt"/>
        
        <LinearLayout
            android:id="@+id/progressDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            >

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_progress"
                android:gravity="center"
                android:text="@string/_0_4"
                android:textSize="14sp"
                android:textColorHint="#7A8089"
                android:padding="15dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_one"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/google"
            android:textColor="#7A8089"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_two"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/apple"
            android:textColor="#7A8089"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_three"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/microsoft"
            android:textColor="#7A8089"
            android:textSize="18sp"
            /> <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_option_four"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/openai"
            android:textColor="#7A8089"
            android:textSize="18sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:layout_margin="30dp"
            android:text="@string/submit"
            android:backgroundTint="#00BCD4"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </LinearLayout>


</ScrollView>